--- a/src/yaml/buff.yaml
+++ b/src/yaml/buff.yaml
@@ -1,4 +1,4 @@
-- SECTION: ''
+- SECTION: ""
 
   might:
     text: >
@@ -6,7 +6,7 @@
       Might
       <small class="text-muted font-italic">(25x)</small>
     modifiers:
-      buff: {'Power': 750, 'Condition Damage': 750}
+      buff: { "Power": 750, "Condition Damage": 750 }
     default-enabled: true
 
   fury:
@@ -14,7 +14,7 @@
       <span class="icon icon-fury"></span>
       Fury
     modifiers:
-      buff: {'Critical Chance': 20}
+      buff: { "Critical Chance": 20 }
     default-enabled: true
 
   protection:
@@ -22,7 +22,7 @@
       <span class="icon icon-protection"></span>
       Protection
     modifiers:
-      multiplier: {'Effective Health': 0.33}
+      multiplier: { "Effective Health": 0.33 }
 
   vulnerability:
     text: >
@@ -30,79 +30,79 @@
       Vulnerability
       <small class="text-muted font-italic">(25x)</small>
     modifiers:
-      multiplier: {'Effective Power': 0.25, 'Effective Condition Damage': 0.25}
+      multiplier: { "Effective Power": 0.25, "Effective Condition Damage": 0.25 }
     default-enabled: true
 
-- SECTION: ''
+- SECTION: ""
 
   banner-of-strength:
-    text: 'Banner of Strength'
+    text: "Banner of Strength"
     modifiers:
-      buff: {'Power': 100, 'Condition Damage': 100}
+      buff: { "Power": 100, "Condition Damage": 100 }
     gw2-id: 14405
-    armory-type: 'skills'
+    armory-type: "skills"
     default-enabled: true
-    extraCSS: 'text-warrior'
+    extraCSS: "text-warrior"
 
   banner-of-discipline:
-    text: 'Banner of Discipline'
+    text: "Banner of Discipline"
     modifiers:
-      buff: {'Precision': 100, 'Ferocity': 100}
+      buff: { "Precision": 100, "Ferocity": 100 }
     gw2-id: 14407
-    armory-type: 'skills'
+    armory-type: "skills"
     default-enabled: true
-    extraCSS: 'text-warrior'
+    extraCSS: "text-warrior"
 
   banner-of-tactics:
-    text: 'Banner of Tactics'
+    text: "Banner of Tactics"
     modifiers:
-      buff: {'Healing Power': 100, 'Boon Duration': 10}
+      buff: { "Healing Power": 100, "Boon Duration": 10 }
     gw2-id: 14408
-    armory-type: 'skills'
-    extraCSS: 'text-warrior'
+    armory-type: "skills"
+    extraCSS: "text-warrior"
 
   empower-allies:
-    text: 'Empower Allies'
+    text: "Empower Allies"
     modifiers:
-      buff: {'Power': 100}
+      buff: { "Power": 100 }
     gw2-id: 1482
-    armory-type: 'traits'
-    extraCSS: 'text-warrior'
+    armory-type: "traits"
+    extraCSS: "text-warrior"
 
-- SECTION: ''
+- SECTION: ""
 
   spotter:
-    text: 'Spotter'
+    text: "Spotter"
     modifiers:
-      buff: {'Precision': 100}
+      buff: { "Precision": 100 }
     gw2-id: 1016
-    armory-type: 'traits'
-    extraCSS: 'text-ranger'
+    armory-type: "traits"
+    extraCSS: "text-ranger"
 
   frost-spirit:
-    text: 'Frost Spirit'
+    text: "Frost Spirit"
     modifiers:
-      multiplier: {'add: Effective Power': 0.05}
+      multiplier: { "add: Effective Power": 0.05 }
     gw2-id: 12497
-    armory-type: 'skills'
+    armory-type: "skills"
     default-enabled: true
-    extraCSS: 'text-ranger'
+    extraCSS: "text-ranger"
 
   pinpoint-distribution:
-    text: 'Pinpoint Distribution'
+    text: "Pinpoint Distribution"
     modifiers:
-      buff: {'Condition Damage': 100}
+      buff: { "Condition Damage": 100 }
     gw2-id: 1984
-    armory-type: 'traits'
-    extraCSS: 'text-engineer'
+    armory-type: "traits"
+    extraCSS: "text-engineer"
 
   strength-in-numbers:
-    text: 'Strength in Numbers'
+    text: "Strength in Numbers"
     modifiers:
-      buff: {'Toughness': 100}
+      buff: { "Toughness": 100 }
     gw2-id: 584
-    armory-type: 'traits'
-    extraCSS: 'text-guardian'
+    armory-type: "traits"
+    extraCSS: "text-guardian"
 
 - SECTION: >
     Guardian
@@ -110,62 +110,61 @@
     Perfect Inscriptions (Assuming 100% uptime!)
 
   bane-signet:
-    text: 'Bane Signet'
+    text: "Bane Signet"
     modifiers:
-      buff: {'Power': 216}
+      buff: { "Power": 216 }
     gw2-id: 9093
-    armory-type: 'skills'
+    armory-type: "skills"
     default-enabled: true
-    extraCSS: 'text-guardian'
+    extraCSS: "text-guardian"
 
   signet-of-judgement:
-    text: 'Signet of Judgement'
+    text: "Signet of Judgement"
     modifiers:
-      multiplier: {'Effective Health': 0.12}
+      multiplier: { "Effective Health": 0.12 }
     gw2-id: 9150
-    armory-type: 'skills'
-    extraCSS: 'text-guardian'
+    armory-type: "skills"
+    extraCSS: "text-guardian"
 
   signet-of-mercy:
-    text: 'Signet of Mercy'
+    text: "Signet of Mercy"
     modifiers:
-      buff: {'Boon Duration': 10}
+      buff: { "Boon Duration": 10 }
     gw2-id: 9163
-    armory-type: 'skills'
-    extraCSS: 'text-guardian'
+    armory-type: "skills"
+    extraCSS: "text-guardian"
 
   signet-of-wrath:
-    text: 'Signet of Wrath'
+    text: "Signet of Wrath"
     modifiers:
-      buff: {'Condition Damage': 216}
+      buff: { "Condition Damage": 216 }
     gw2-id: 9151
-    armory-type: 'skills'
-    extraCSS: 'text-guardian'
+    armory-type: "skills"
+    extraCSS: "text-guardian"
 
-- SECTION: ''
+- SECTION: ""
 
   assassins-presence:
-    text: 'Assassin''s Presence'
+    text: "Assassin's Presence"
     modifiers:
-      buff: {'Ferocity': 150}
+      buff: { "Ferocity": 150 }
     gw2-id: 1786
-    armory-type: 'traits'
+    armory-type: "traits"
     default-enabled: true
-    extraCSS: 'text-revenant'
+    extraCSS: "text-revenant"
 
   facet-of-nature:
-    text: 'Facet of Nature—Dragon'
+    text: "Facet of Nature—Dragon"
     modifiers:
-      buff: {'Boon Duration': 20}
+      buff: { "Boon Duration": 20 }
     gw2-id: 29371
-    armory-type: 'skills'
-    extraCSS: 'text-revenant'
+    armory-type: "skills"
+    extraCSS: "text-revenant"
 
   rite-of-the-great-dwarf:
-    text: 'Rite of the Great Dwarf'
+    text: "Rite of the Great Dwarf"
     modifiers:
-      multiplier: {'Effective Health': 0.5}
+      multiplier: { "Effective Health": 0.5 }
     gw2-id: 27975
-    armory-type: 'skills'
-    extraCSS: 'text-revenant'
-
+    armory-type: "skills"
+    extraCSS: "text-revenant"
