--- a/src/yaml/elementalist.yaml
+++ b/src/yaml/elementalist.yaml
@@ -1,86 +1,86 @@
-- SECTION: 'Skills'
+- SECTION: "Skills"
 
   signet-of-fire:
-    text: 'Signet of Fire'
+    text: "Signet of Fire"
     modifiers:
-      buff: {'Precision': 180}
+      buff: { "Precision": 180 }
     gw2-id: 5542
-    armory-type: 'skills'
+    armory-type: "skills"
 
   signet-of-earth:
-    text: 'Signet of Earth'
+    text: "Signet of Earth"
     modifiers:
-      buff: {'Toughness': 180}
+      buff: { "Toughness": 180 }
     gw2-id: 5571
-    armory-type: 'skills'
+    armory-type: "skills"
 
   flame-axe:
-    text: 'Flame Axe <small>when equipped</small>'
+    text: "Flame Axe <small>when equipped</small>"
     modifiers:
-      buff: {'Power': 180, 'Condition Damage': 180}
+      buff: { "Power": 180, "Condition Damage": 180 }
     gw2-id: 5540
-    armory-type: 'skills'
-    extraCSS: 'mt-4'
+    armory-type: "skills"
+    extraCSS: "mt-4" # margin-top
 
   earth-shield:
-    text: 'Earth Shield <small>when equipped</small>'
+    text: "Earth Shield <small>when equipped</small>"
     modifiers:
-      buff: {'Vitality': 180, 'Toughness': 180}
+      buff: { "Vitality": 180, "Toughness": 180 }
     gw2-id: 5546
-    armory-type: 'skills'
+    armory-type: "skills"
 
   fiery-greatsword:
-    text: 'Fiery Greatsword <small>when equipped</small>'
+    text: "Fiery Greatsword <small>when equipped</small>"
     modifiers:
-      buff: {'Power': 260, 'Condition Damage': 180}
+      buff: { "Power": 260, "Condition Damage": 180 }
     gw2-id: 5516
-    armory-type: 'skills'
+    armory-type: "skills"
 
   lightning-hammer:
-    text: 'Lightning Hammer <small>when equipped</small>'
+    text: "Lightning Hammer <small>when equipped</small>"
     modifiers:
-      buff: {'Precision': 180, 'Ferocity': 75}
+      buff: { "Precision": 180, "Ferocity": 75 }
     gw2-id: 5624
-    armory-type: 'skills'
+    armory-type: "skills"
 
   frost-bow:
-    text: 'Frost Bow <small>when equipped</small>'
+    text: "Frost Bow <small>when equipped</small>"
     modifiers:
-      buff: {'Healing Power': 180, 'Condition Duration': 20}
+      buff: { "Healing Power": 180, "Condition Duration": 20 }
     gw2-id: 5567
-    armory-type: 'skills'
+    armory-type: "skills"
 
-- SECTION: 'Fire'
+- SECTION: "Fire"
 
   empowering-flame:
     text: >
       Empowering Flame <br>(100% in
       <span data-armory-size="16" data-armory-embed="skills" data-armory-ids="5492"></span>)
     modifiers:
-      buff: {'Power': 150}
+      buff: { "Power": 150 }
     gw2-id: 320
-    armory-type: 'traits'
+    armory-type: "traits"
 
   burning-precision:
-    text: 'Burning Precision'
+    text: "Burning Precision"
     modifiers:
-      buff: {'Burning Duration': 20}
+      buff: { "Burning Duration": 20 }
     gw2-id: 296
-    armory-type: 'traits'
+    armory-type: "traits"
 
   burning-rage:
-    text: 'Burning Rage'
+    text: "Burning Rage"
     modifiers:
-      buff: {'Condition Damage': 180}
+      buff: { "Condition Damage": 180 }
     gw2-id: 325
-    armory-type: 'traits'
+    armory-type: "traits"
 
   power-overwhelming:
-    text: 'Power Overwhelming <small>perma</small>'
+    text: "Power Overwhelming <small>perma</small>"
     modifiers:
-      buff: {'Power': 150}
+      buff: { "Power": 150 }
     gw2-id: 334
-    armory-type: 'traits'
+    armory-type: "traits"
 
   power-overwhelming-2:
     text: >
@@ -88,46 +88,46 @@
       <span data-armory-size="16" data-armory-embed="skills" data-armory-ids="5492"></span>
        - tick both)
     modifiers:
-      buff: {'Power': 150}
+      buff: { "Power": 150 }
     gw2-id: 334
-    armory-type: 'traits'
+    armory-type: "traits"
 
   pyromancers-training:
-    text: 'Pyromancer''s Training'
+    text: "Pyromancer's Training"
     modifiers:
-      multiplier: {'Effective Power': 0.1}
+      multiplier: { "Effective Power": 0.1 }
     gw2-id: 319
-    armory-type: 'traits'
+    armory-type: "traits"
 
-- SECTION: 'Air'
+- SECTION: "Air"
 
   ferocious-winds:
-    text: 'Ferocious Winds'
+    text: "Ferocious Winds"
     modifiers:
-      convert: {'Ferocity': {'Precision': 0.07}}
+      convert: { "Ferocity": { "Precision": 0.07 } }
     gw2-id: 232
-    armory-type: 'traits'
+    armory-type: "traits"
 
   raging-storm:
-    text: 'Raging Storm'
+    text: "Raging Storm"
     modifiers:
-      buff: {'Ferocity': 180}
+      buff: { "Ferocity": 180 }
     gw2-id: 214
-    armory-type: 'traits'
+    armory-type: "traits"
 
   stormsoul:
-    text: 'Stormsoul'
+    text: "Stormsoul"
     modifiers:
-      multiplier: {'Effective Power': 0.1}
+      multiplier: { "Effective Power": 0.1 }
     gw2-id: 1502
-    armory-type: 'traits'
+    armory-type: "traits"
 
   aeromancers-training:
-    text: 'Aeromancer''s Training <small>perma</small>'
+    text: "Aeromancer's Training <small>perma</small>"
     modifiers:
-      buff: {'Ferocity': 150}
+      buff: { "Ferocity": 150 }
     gw2-id: 223
-    armory-type: 'traits'
+    armory-type: "traits"
 
   aeromancers-training-2:
     text: >
@@ -135,65 +135,65 @@
       <span data-armory-size="16" data-armory-embed="skills" data-armory-ids="5494"></span>
        - tick both)
     modifiers:
-      buff: {'Ferocity': 150}
+      buff: { "Ferocity": 150 }
     gw2-id: 223
-    armory-type: 'traits'
+    armory-type: "traits"
 
   bolt-to-the-heart:
-    text: 'Bolt to the Heart <small>50% uptime</small>'
+    text: "Bolt to the Heart <small>50% uptime</small>"
     modifiers:
-      multiplier: {'Effective Power': 0.1}
+      multiplier: { "Effective Power": 0.1 }
     gw2-id: 226
-    armory-type: 'traits'
+    armory-type: "traits"
 
   fresh-air:
-    text: 'Fresh Air <small>100% uptime</small>'
+    text: "Fresh Air <small>100% uptime</small>"
     modifiers:
-      buff: {'Ferocity': 250}
+      buff: { "Ferocity": 250 }
     gw2-id: 1503
-    armory-type: 'traits'
+    armory-type: "traits"
 
-- SECTION: 'Earth'
+- SECTION: "Earth"
 
   stone-flesh:
     text: >
       Stone Flesh (100% in
       <span data-armory-size="16" data-armory-embed="skills" data-armory-ids="5495"></span>)
     modifiers:
-      multiplier: {'Effective Health': 0.07}
+      multiplier: { "Effective Health": 0.07 }
     gw2-id: 278
-    armory-type: 'traits'
+    armory-type: "traits"
 
   serrated-stones:
-    text: 'Serrated Stones'
+    text: "Serrated Stones"
     modifiers:
-      multiplier: {'Effective Power': 0.05}
-      buff: {'Bleeding Duration': 20}
+      multiplier: { "Effective Power": 0.05 }
+      buff: { "Bleeding Duration": 20 }
     gw2-id: 1507
-    armory-type: 'traits'
+    armory-type: "traits"
 
   strength-of-stone:
-    text: 'Strength of Stone'
+    text: "Strength of Stone"
     modifiers:
-      convert: {'Condition Damage': {'Toughness': 0.1}}
+      convert: { "Condition Damage": { "Toughness": 0.1 } }
     gw2-id: 275
-    armory-type: 'traits'
+    armory-type: "traits"
 
   geomancers-defense:
-    text: 'Geomancer''s Defense'
+    text: "Geomancer's Defense"
     modifiers:
-      multiplier: {'Effective Health': 0.1}
+      multiplier: { "Effective Health": 0.1 }
     gw2-id: 280
-    armory-type: 'traits'
+    armory-type: "traits"
 
-- SECTION: 'Water'
+- SECTION: "Water"
 
   piercing-blades:
-    text: 'Piercing Shards'
+    text: "Piercing Shards"
     modifiers:
-      multiplier: {'Effective Power': 0.1}
+      multiplier: { "Effective Power": 0.1 }
     gw2-id: 363
-    armory-type: 'traits'
+    armory-type: "traits"
 
   piercing-blades-2:
     text: >
@@ -201,139 +201,138 @@
       <span data-armory-size="16" data-armory-embed="skills" data-armory-ids="5493"></span>
        - tick both</small>
     modifiers:
-      multiplier: {'Effective Power': 0.1}
+      multiplier: { "Effective Power": 0.1 }
     gw2-id: 363
-    armory-type: 'traits'
+    armory-type: "traits"
 
   flow-like-water:
-    text: 'Flow like Water'
+    text: "Flow like Water"
     modifiers:
-      multiplier: {'Effective Power': 0.1}
+      multiplier: { "Effective Power": 0.1 }
     gw2-id: 349
-    armory-type: 'traits'
+    armory-type: "traits"
 
   aquamancers-training:
-    text: 'Aquamancer''s Training'
+    text: "Aquamancer's Training"
     modifiers:
-      multiplier: {'Effective Healing': 0.15}
+      multiplier: { "Effective Healing": 0.15 }
     gw2-id: 1676
-    armory-type: 'traits'
+    armory-type: "traits"
 
-- SECTION: 'Arcane'
+- SECTION: "Arcane"
 
   elemental-enchantment:
-    text: 'Elemental Enchantment'
+    text: "Elemental Enchantment"
     modifiers:
-      buff: {'Concentration': 180}
+      buff: { "Concentration": 180 }
     gw2-id: 2004
-    armory-type: 'traits'
+    armory-type: "traits"
 
   elemental-surge:
-    text: 'Elemental Surge (100% uptime)'
+    text: "Elemental Surge (100% uptime)"
     modifiers:
-      flat: {'Ferocity': 150}
+      flat: { "Ferocity": 150 }
     gw2-id: 263
-    armory-type: 'traits'
+    armory-type: "traits"
 
   bountiful-power:
-    text: 'Bountiful Power <small>6x</small>'
+    text: "Bountiful Power <small>6x</small>"
     modifiers:
-      multiplier: {'Effective Power': 0.12}
+      multiplier: { "Effective Power": 0.12 }
     gw2-id: 1511
-    armory-type: 'traits'
+    armory-type: "traits"
 
   bountiful-power-9:
-    text: 'Bountiful Power <small>9x</small>'
+    text: "Bountiful Power <small>9x</small>"
     modifiers:
-      multiplier: {'Effective Power': 0.18}
+      multiplier: { "Effective Power": 0.18 }
     gw2-id: 1511
-    armory-type: 'traits'
+    armory-type: "traits"
 
-- SECTION: 'Tempest'
+- SECTION: "Tempest"
 
   gathered-focus:
-    text: 'Gathered Focus <small>100%</small>'
+    text: "Gathered Focus <small>100%</small>"
     modifiers:
-      buff: {'Concentration': 240}
+      buff: { "Concentration": 240 }
     gw2-id: 1938
-    armory-type: 'traits'
+    armory-type: "traits"
 
   hardy-conduit:
-    text: 'Hardy Conduit'
+    text: "Hardy Conduit"
     modifiers:
-      multiplier: {'Effective Health': 0.1167}
+      multiplier: { "Effective Health": 0.1167 }
     gw2-id: 1948
-    armory-type: 'traits'
+    armory-type: "traits"
 
   transcendent-tempest:
-    text: 'Transcendent Tempest'
+    text: "Transcendent Tempest"
     modifiers:
-      multiplier: {'add: Effective Power': 0.07, 'add: Effective Condition Damage': 0.07}
+      multiplier: { "add: Effective Power": 0.07, "add: Effective Condition Damage": 0.07 }
     gw2-id: 1839
-    armory-type: 'traits'
+    armory-type: "traits"
 
-- SECTION: 'Weaver'
+- SECTION: "Weaver"
 
   superior-elements:
-    text: 'Superior Elements <small>100% uptime</small>'
+    text: "Superior Elements <small>100% uptime</small>"
     modifiers:
-      buff: {'Critical Chance': 10}
+      buff: { "Critical Chance": 10 }
     gw2-id: 2177
-    armory-type: 'traits'
+    armory-type: "traits"
 
   masters-fortitude:
-    text: 'Master''s Fortitude <small>With Sword</small>'
+    text: "Master's Fortitude <small>With Sword</small>"
     modifiers:
-      flat: {'Vitality': 120}
-      convert: {'Vitality': {'Power': 0.05, 'Condition Damage': 0.05}}
+      flat: { "Vitality": 120 }
+      convert: { "Vitality": { "Power": 0.05, "Condition Damage": 0.05 } }
     gw2-id: 2115
-    armory-type: 'traits'
+    armory-type: "traits"
 
   masters-fortitude-without:
-    text: 'Master''s Fortitude <small>Without Sword</small>'
+    text: "Master's Fortitude <small>Without Sword</small>"
     modifiers:
-      convert: {'Vitality': {'Power': 0.05, 'Condition Damage': 0.05}}
+      convert: { "Vitality": { "Power": 0.05, "Condition Damage": 0.05 } }
     gw2-id: 2115
-    armory-type: 'traits'
+    armory-type: "traits"
 
   weavers-prowess:
-    text: 'Weaver''s Prowess <small>100% uptime</small>'
+    text: "Weaver's Prowess <small>100% uptime</small>"
     modifiers:
-      multiplier: {'add: Effective Condition Damage': 0.1}
-      buff: {'Condition Duration': 20}
+      multiplier: { "add: Effective Condition Damage": 0.1 }
+      buff: { "Condition Duration": 20 }
     gw2-id: 2180
-    armory-type: 'traits'
+    armory-type: "traits"
 
   swift-revenge:
-    text: 'Swift Revenge'
+    text: "Swift Revenge"
     modifiers:
-      multiplier: {'add: Effective Power': 0.1}
+      multiplier: { "add: Effective Power": 0.1 }
     gw2-id: 2061
-    armory-type: 'traits'
+    armory-type: "traits"
 
   elemental-polyphony-fire:
     text: >
       Elemental Polyphony <br>(100% in
       <span data-armory-size="16" data-armory-embed="skills" data-armory-ids="5492"></span>)
     modifiers:
-      buff: {'Power': 120}
+      buff: { "Power": 120 }
     gw2-id: 2081
-    armory-type: 'traits'
+    armory-type: "traits"
 
   elemental-polyphony-air:
     text: >
       Elemental Polyphony <br>(100% in
       <span data-armory-size="16" data-armory-embed="skills" data-armory-ids="5494"></span>)
     modifiers:
-      buff: {'Ferocity': 120}
+      buff: { "Ferocity": 120 }
     gw2-id: 2081
-    armory-type: 'traits'
+    armory-type: "traits"
 
   elements-of-rage:
-    text: 'Elements of Rage'
+    text: "Elements of Rage"
     modifiers:
-      multiplier: {'add: Effective Condition Damage': 0.05}
-      convert: {'Precision': {'Vitality': 0.13}}
+      multiplier: { "add: Effective Condition Damage": 0.05 }
+      convert: { "Precision": { "Vitality": 0.13 } }
     gw2-id: 2131
-    armory-type: 'traits'
-
+    armory-type: "traits"
