--- a/src/yaml/engineer.yaml
+++ b/src/yaml/engineer.yaml
@@ -1,181 +1,180 @@
-- SECTION: 'Explosives'
+- SECTION: "Explosives"
 
   glass-cannon:
-    text: 'Glass Cannon'
+    text: "Glass Cannon"
     modifiers:
-      multiplier: {'Effective Power': 0.1}
+      multiplier: { "Effective Power": 0.1 }
     gw2-id: 1882
-    armory-type: 'traits'
+    armory-type: "traits"
 
   explosive-temper:
-    text: 'Explosive Temper <small>10x</small>'
+    text: "Explosive Temper <small>10x</small>"
     modifiers:
-      buff: {'Ferocity': 200}
+      buff: { "Ferocity": 200 }
     gw2-id: 1892
-    armory-type: 'traits'
+    armory-type: "traits"
 
   blast-shield:
-    text: 'Blast Shield'
+    text: "Blast Shield"
     modifiers:
-      convert: {'Vitality': {'Power': 0.1}}
+      convert: { "Vitality": { "Power": 0.1 } }
     gw2-id: 1944
-    armory-type: 'traits'
+    armory-type: "traits"
 
   shaped-charge:
-    text: 'Shaped Charge <small>25x</small>'
+    text: "Shaped Charge <small>25x</small>"
     modifiers:
-      multiplier: {'Effective Power': 0.125}
+      multiplier: { "Effective Power": 0.125 }
     gw2-id: 429
-    armory-type: 'traits'
+    armory-type: "traits"
 
   big-boomer:
-    text: 'Big Boomer <small>100%</small>'
+    text: "Big Boomer <small>100%</small>"
     modifiers:
-      multiplier: {'Effective Power': 0.1}
+      multiplier: { "Effective Power": 0.1 }
     gw2-id: 1947
-    armory-type: 'traits'
+    armory-type: "traits"
 
-- SECTION: 'Firearms'
+- SECTION: "Firearms"
 
   chemical-rounds:
-    text: 'Chemical Rounds'
+    text: "Chemical Rounds"
     modifiers:
-      buff: {'Condition Damage': 120}
+      buff: { "Condition Damage": 120 }
     gw2-id: 1878
-    armory-type: 'traits'
+    armory-type: "traits"
 
   high-caliber:
-    text: 'High Caliber'
+    text: "High Caliber"
     modifiers:
-      buff: {'Critical Chance': 15}
+      buff: { "Critical Chance": 15 }
     gw2-id: 1914
-    armory-type: 'traits'
+    armory-type: "traits"
 
   hematic-focus:
-    text: 'Hematic Focus'
+    text: "Hematic Focus"
     modifiers:
-      buff: {'Critical Chance': 10}
+      buff: { "Critical Chance": 10 }
     gw2-id: 536
-    armory-type: 'traits'
+    armory-type: "traits"
 
   thermal-vision:
-    text: 'Thermal Vision'
+    text: "Thermal Vision"
     modifiers:
-      flat: {'Expertise': 150}
-      multiplier: {'add: Effective Condition Damage': 0.05}
+      flat: { "Expertise": 150 }
+      multiplier: { "add: Effective Condition Damage": 0.05 }
     gw2-id: 2006
-    armory-type: 'traits'
+    armory-type: "traits"
 
   no-scope:
-    text: 'No Scope'
+    text: "No Scope"
     modifiers:
-      buff: {'Ferocity': 150}
+      buff: { "Ferocity": 150 }
     gw2-id: 1923
-    armory-type: 'traits'
+    armory-type: "traits"
 
   serrated-steel:
-    text: 'Serrated Steel'
+    text: "Serrated Steel"
     modifiers:
-      flat: {'Bleeding Duration': 33}
+      flat: { "Bleeding Duration": 33 }
     gw2-id: 516
-    armory-type: 'traits'
+    armory-type: "traits"
 
   modified-ammunition-10:
-    text: 'Modified Ammunition <small>10x</small>'
+    text: "Modified Ammunition <small>10x</small>"
     modifiers:
-      multiplier: {'Effective Power': 0.2}
+      multiplier: { "Effective Power": 0.2 }
     gw2-id: 526
-    armory-type: 'traits'
+    armory-type: "traits"
 
   modified-ammunition-14:
-    text: 'Modified Ammunition <small>14x</small>'
+    text: "Modified Ammunition <small>14x</small>"
     modifiers:
-      multiplier: {'Effective Power': 0.28}
+      multiplier: { "Effective Power": 0.28 }
     gw2-id: 526
-    armory-type: 'traits'
+    armory-type: "traits"
 
   incendiary-powder:
-    text: 'Incendiary Powder'
+    text: "Incendiary Powder"
     modifiers:
-      flat: {'Burning Duration': 33}
+      flat: { "Burning Duration": 33 }
     gw2-id: 433
-    armory-type: 'traits'
+    armory-type: "traits"
 
-- SECTION: 'Inventions'
+- SECTION: "Inventions"
 
   over-shield:
-    text: 'Over Shield'
+    text: "Over Shield"
     modifiers:
-      multiplier: {'Effective Health': 0.066}
+      multiplier: { "Effective Health": 0.066 }
     gw2-id: 394
-    armory-type: 'traits'
+    armory-type: "traits"
 
   energy-amplifier:
-    text: 'Energy Amplifier'
+    text: "Energy Amplifier"
     modifiers:
-      buff: {'Healing Power': 120}
+      buff: { "Healing Power": 120 }
     gw2-id: 519
-    armory-type: 'traits'
+    armory-type: "traits"
 
-- SECTION: 'Alchemy'
+- SECTION: "Alchemy"
 
   health-insurance:
-    text: 'Health Insurance <small>in med kit</small>'
+    text: "Health Insurance <small>in med kit</small>"
     modifiers:
-      multiplier: {'Effective Healing': 0.2}
+      multiplier: { "Effective Healing": 0.2 }
     gw2-id: 521
-    armory-type: 'traits'
+    armory-type: "traits"
 
   compounding-chemicals:
-    text: 'Compounding Chemicals'
+    text: "Compounding Chemicals"
     modifiers:
-      buff: {'Concentration': 240}
+      buff: { "Concentration": 240 }
     gw2-id: 413
-    armory-type: 'traits'
+    armory-type: "traits"
 
-- SECTION: 'Tools'
+- SECTION: "Tools"
 
   excessive-energy:
-    text: 'Excessive Energy'
+    text: "Excessive Energy"
     modifiers:
-      multiplier: {'add: Effective Power': 0.1}
+      multiplier: { "add: Effective Power": 0.1 }
     gw2-id: 1936
-    armory-type: 'traits'
+    armory-type: "traits"
 
-- SECTION: 'Scrapper'
+- SECTION: "Scrapper"
 
   object-in-motion-1:
-    text: 'Object in Motion (One)'
+    text: "Object in Motion (One)"
     modifiers:
-      multiplier: {'Effective Power': 0.05}
+      multiplier: { "Effective Power": 0.05 }
     gw2-id: 1860
-    armory-type: 'traits'
+    armory-type: "traits"
 
   object-in-motion-2:
-    text: 'Object in Motion (Two)'
+    text: "Object in Motion (Two)"
     modifiers:
-      multiplier: {'Effective Power': 0.1}
+      multiplier: { "Effective Power": 0.1 }
     gw2-id: 1860
-    armory-type: 'traits'
+    armory-type: "traits"
 
   object-in-motion-3:
-    text: 'Object in Motion (Three)'
+    text: "Object in Motion (Three)"
     modifiers:
-      multiplier: {'Effective Power': 0.15}
+      multiplier: { "Effective Power": 0.15 }
     gw2-id: 1860
-    armory-type: 'traits'
+    armory-type: "traits"
 
   impact-savant:
-    text: 'Impact Savant'
+    text: "Impact Savant"
     modifiers:
-      buff: {'Vitality': -180}
+      buff: { "Vitality": -180 }
     gw2-id: 1877
-    armory-type: 'traits'
+    armory-type: "traits"
 
   applied-force:
-    text: 'Applied Force <small>25 might</small>'
+    text: "Applied Force <small>25 might</small>"
     modifiers:
-      buff: {'Power': 250}
+      buff: { "Power": 250 }
     gw2-id: 1849
-    armory-type: 'traits'
-
+    armory-type: "traits"
