--- a/src/yaml/sigils.yaml
+++ b/src/yaml/sigils.yaml
@@ -1,165 +1,166 @@
-- SECTION: 'Power Sigils'
+- SECTION: "Power Sigils"
 
   force:
-    text: 'Superior Sigil of Force'
+    text: "Superior Sigil of Force"
     modifiers:
-      multiplier: {'add: Effective Power': 0.05}
+      multiplier: { "add: Effective Power": 0.05 }
     gw2-id: 24615
-    armory-type: 'items'
+    armory-type: "items"
 
   accuracy:
-    text: 'Superior Sigil of Accuracy'
+    text: "Superior Sigil of Accuracy"
     modifiers:
-      flat: {'Critical Chance': 7}
+      flat: { "Critical Chance": 7 }
     gw2-id: 24618
-    armory-type: 'items'
+    armory-type: "items"
 
   night/impact/slaying-both:
     text: >
       Superior Sigil of the Night/Impact/Slaying<br>
       <small class="text-muted font-italic">(Both 7%/3%)</small>
     modifiers:
-      multiplier: {'add: Effective Power': 0.1}
+      multiplier: { "add: Effective Power": 0.1 }
     gw2-id: 36053
-    armory-type: 'items'
+    armory-type: "items"
 
   night/impact/slaying-only-3:
     text: >
       Superior Sigil of the Night/Impact/Slaying<br>
       <small class="text-muted font-italic">(Only 3%)</small>
     modifiers:
-      multiplier: {'add: Effective Power': 0.03}
+      multiplier: { "add: Effective Power": 0.03 }
     gw2-id: 36053
-    armory-type: 'items'
+    armory-type: "items"
 
-- SECTION: 'Support Sigils'
+- SECTION: "Support Sigils"
 
   concentration:
-    text: 'Superior Sigil of Concentration'
+    text: "Superior Sigil of Concentration"
     modifiers:
-      flat: {'Boon Duration': 10}
+      flat: { "Boon Duration": 10 }
     gw2-id: 72339
-    armory-type: 'items'
+    armory-type: "items"
 
-- SECTION: 'Heal Sigils'
+- SECTION: "Heal Sigils"
 
   transference:
-    text: 'Superior Sigil of Transference'
+    text: "Superior Sigil of Transference"
     modifiers:
-      multiplier: {'Effective Healing': 0.1}
+      multiplier: { "Effective Healing": 0.1 }
     gw2-id: 74326
-    armory-type: 'items'
+    armory-type: "items"
 
-- SECTION: 'Condition Sigils'
+- SECTION: "Condition Sigils"
 
   malice:
-    text: 'Superior Sigil of Malice'
+    text: "Superior Sigil of Malice"
     modifiers:
-      flat: {'Condition Duration': 10}
+      flat: { "Condition Duration": 10 }
     gw2-id: 44950
-    armory-type: 'items'
+    armory-type: "items"
 
   bursting:
-    text: 'Superior Sigil of Bursting'
+    text: "Superior Sigil of Bursting"
     modifiers:
-      multiplier: {'add: Effective Condition Damage': 0.05}
+      multiplier: { "add: Effective Condition Damage": 0.05 }
     gw2-id: 44944
-    armory-type: 'items'
+    armory-type: "items"
 
   agony:
-    text: 'Superior Sigil of Agony'
+    text: "Superior Sigil of Agony"
     modifiers:
-      flat: {'Bleeding Duration': 20}
+      flat: { "Bleeding Duration": 20 }
     gw2-id: 24612
-    armory-type: 'items'
+    armory-type: "items"
 
   smoldering:
-    text: 'Superior Sigil of Smoldering'
+    text: "Superior Sigil of Smoldering"
     modifiers:
-      flat: {'Burning Duration': 20}
+      flat: { "Burning Duration": 20 }
     gw2-id: 24624
-    armory-type: 'items'
+    armory-type: "items"
 
   venom:
-    text: 'Superior Sigil of Venom'
+    text: "Superior Sigil of Venom"
     modifiers:
-      flat: {'Poison Duration': 20}
+      flat: { "Poison Duration": 20 }
     gw2-id: 24632
-    armory-type: 'items'
+    armory-type: "items"
 
   demons:
-    text: 'Superior Sigil of Demons'
+    text: "Superior Sigil of Demons"
     modifiers:
-      flat: {'Torment Duration': 20}
+      flat: { "Torment Duration": 20 }
     gw2-id: 24583
-    armory-type: 'items'
+    armory-type: "items"
 
-- SECTION: 'Stacking Sigils (25x)'
+- SECTION: "Stacking Sigils (25x)"
 
   bloodlust:
-    text: 'Superior Sigil of Bloodlust'
+    text: "Superior Sigil of Bloodlust"
     modifiers:
-      flat: {'Power': 250}
+      flat: { "Power": 250 }
     gw2-id: 24575
-    armory-type: 'items'
+    armory-type: "items"
 
   cruelty:
-    text: 'Superior Sigil of Cruelty'
+    text: "Superior Sigil of Cruelty"
     modifiers:
-      flat: {'Ferocity': 250}
+      flat: { "Ferocity": 250 }
     gw2-id: 67341
-    armory-type: 'items'
+    armory-type: "items"
 
   perception:
-    text: 'Superior Sigil of Perception'
+    text: "Superior Sigil of Perception"
     modifiers:
-      flat: {'Precision': 250}
+      flat: { "Precision": 250 }
     gw2-id: 24580
-    armory-type: 'items'
+    armory-type: "items"
 
   corruption:
-    text: 'Superior Sigil of Corruption'
+    text: "Superior Sigil of Corruption"
     modifiers:
-      flat: {'Condition Damage': 250}
+      flat: { "Condition Damage": 250 }
     gw2-id: 24578
-    armory-type: 'items'
+    armory-type: "items"
 
   life:
-    text: 'Superior Sigil of Life'
+    text: "Superior Sigil of Life"
     modifiers:
-      flat: {'Healing Power': 250}
+      flat: { "Healing Power": 250 }
     gw2-id: 24582
-    armory-type: 'items'
+    armory-type: "items"
 
   bounty:
-    text: 'Superior Sigil of Bounty'
+    text: "Superior Sigil of Bounty"
     modifiers:
-      flat: {'Concentration': 225}
+      flat: { "Concentration": 225 }
     gw2-id: 81045
-    armory-type: 'items'
+    armory-type: "items"
 
   benevolence:
-    text: 'Superior Sigil of Benevolence'
+    text: "Superior Sigil of Benevolence"
     modifiers:
-      multiplier: {'Effective Healing': 0.125}
+      multiplier: { "Effective Healing": 0.125 }
     gw2-id: 24584
-    armory-type: 'items'
+    armory-type: "items"
 
   stars:
-    text: 'Superior Sigil of the Stars'
+    text: "Superior Sigil of the Stars"
     modifiers:
-      flat: {'Power': 50, 'Precision': 50, 'Toughness': 50, 'Vitality': 50,
-        'Concentration': 50, 'Condition Damage': 50, 'Expertise': 50,
-        'Ferocity': 50, 'Healing Power': 50}
+      flat:
+        {
+          "Power": 50, "Precision": 50, "Toughness": 50, "Vitality": 50,
+          "Concentration": 50, "Condition Damage": 50, "Expertise": 50, "Ferocity": 50, "Healing Power": 50,
+        }
     gw2-id: 86170
-    armory-type: 'items'
+    armory-type: "items"
 
-- SECTION: 'Gemstones'
+- SECTION: "Gemstones"
 
   platinum-doubloon:
-    text: 'Platinum Doubloon'
+    text: "Platinum Doubloon"
     modifiers:
-      flat: {'Concentration': 40}
+      flat: { "Concentration": 40 }
     gw2-id: 24773
-    armory-type: 'items'
-
+    armory-type: "items"
