--- a/src/yaml/utility.yaml
+++ b/src/yaml/utility.yaml
@@ -1,196 +1,197 @@
-- SECTION: 'Power Utilities'
+- SECTION: "Power Utilities"
 
   slaying-potion:
-    text: 'Slaying Potion'
+    text: "Slaying Potion"
     modifiers:
-      multiplier: {'Effective Power': 0.1, 'Effective Health': 0.1}
+      multiplier: { "Effective Power": 0.1, "Effective Health": 0.1 }
     gw2-id: 50082
-    armory-type: 'items'
+    armory-type: "items"
 
   furious-sharpening-stone:
-    text: 'Furious Sharpening Stone'
+    text: "Furious Sharpening Stone"
     modifiers:
-      convert: {'Power': {'Precision': 0.03}, 'Ferocity': {'Precision': 0.03}}
+      convert: { "Power": { "Precision": 0.03 }, "Ferocity": { "Precision": 0.03 } }
     gw2-id: 67530
-    armory-type: 'items'
+    armory-type: "items"
 
   superior-sharpening-stone:
-    text: 'Superior Sharpening Stone'
+    text: "Superior Sharpening Stone"
     modifiers:
-      convert: {'Power': {'Precision': 0.03, 'Ferocity': 0.06}}
+      convert: { "Power": { "Precision": 0.03, "Ferocity": 0.06 } }
     gw2-id: 9443
-    armory-type: 'items'
+    armory-type: "items"
 
   toxic-sharpening-stone:
-    text: 'Toxic Sharpening Stone'
+    text: "Toxic Sharpening Stone"
     modifiers:
-      convert: {'Power': {'Condition Damage': 0.06, 'Expertise': 0.08}}
+      convert: { "Power": { "Condition Damage": 0.06, "Expertise": 0.08 } }
     gw2-id: 48915
-    armory-type: 'items'
+    armory-type: "items"
 
   magnanimous-sharpening-stone:
-    text: 'Magnanimous Sharpening Stone'
+    text: "Magnanimous Sharpening Stone"
     modifiers:
-      convert: {'Power': {'Vitality': 0.03, 'Toughness': 0.03}}
+      convert: { "Power": { "Vitality": 0.03, "Toughness": 0.03 } }
     gw2-id: 81034
-    armory-type: 'items'
+    armory-type: "items"
 
   bountiful-sharpening-stone:
-    text: 'Bountiful Sharpening Stone'
+    text: "Bountiful Sharpening Stone"
     modifiers:
-      convert: {'Power': {'Healing Power': 0.06, 'Concentration': 0.08}}
+      convert: { "Power": { "Healing Power": 0.06, "Concentration": 0.08 } }
     gw2-id: 67531
-    armory-type: 'items'
+    armory-type: "items"
 
-- SECTION: 'Support Utilities'
+- SECTION: "Support Utilities"
 
   potent-lucent-oil:
-    text: 'Potent Lucent Oil'
+    text: "Potent Lucent Oil"
     modifiers:
-      convert: {'Concentration': {'Power': 0.03, 'Precision': 0.03}}
+      convert: { "Concentration": { "Power": 0.03, "Precision": 0.03 } }
     gw2-id: 89203
-    armory-type: 'items'
+    armory-type: "items"
 
   toxic-maintenance-oil:
-    text: 'Toxic Maintenance Oil'
+    text: "Toxic Maintenance Oil"
     modifiers:
-      convert: {'Concentration': {'Power': 0.03, 'Condition Damage': 0.06}}
+      convert: { "Concentration": { "Power": 0.03, "Condition Damage": 0.06 } }
     gw2-id: 48916
-    armory-type: 'items'
+    armory-type: "items"
 
   enhanced-lucent-oil:
-    text: 'Enhanced Lucent Oil'
+    text: "Enhanced Lucent Oil"
     modifiers:
-      convert: {'Concentration': {'Precision': 0.03, 'Condition Damage': 0.06}}
+      convert: { "Concentration": { "Precision": 0.03, "Condition Damage": 0.06 } }
     gw2-id: 89157
-    armory-type: 'items'
+    armory-type: "items"
 
   furious-maintenance-oil:
-    text: 'Furious Maintenance Oil'
+    text: "Furious Maintenance Oil"
     modifiers:
-      convert: {'Concentration': {'Precision': 0.03}, 'Healing Power': {'Precision': 0.03}}
+      convert: { "Concentration": { "Precision": 0.03 }, "Healing Power": { "Precision": 0.03 } }
     gw2-id: 67529
-    armory-type: 'items'
+    armory-type: "items"
 
   magnanimous-maintenance-oil:
-    text: 'Magnanimous Maintenance Oil'
+    text: "Magnanimous Maintenance Oil"
     modifiers:
-      convert: {'Concentration': {'Vitality': 0.03, 'Toughness': 0.03}}
+      convert: { "Concentration": { "Vitality": 0.03, "Toughness": 0.03 } }
     gw2-id: 81157
-    armory-type: 'items'
+    armory-type: "items"
 
   master-maintenance-oil:
-    text: 'Master Maintenance Oil'
+    text: "Master Maintenance Oil"
     modifiers:
-      convert: {'Concentration': {'Precision': 0.03, 'Healing Power': 0.06}}
+      convert: { "Concentration": { "Precision": 0.03, "Healing Power": 0.06 } }
     gw2-id: 9461
-    armory-type: 'items'
+    armory-type: "items"
 
   corsair-maintenance-oil:
-    text: 'Corsair Maintenance Oil'
+    text: "Corsair Maintenance Oil"
     modifiers:
-      convert: {'Concentration': {'Toughness': 0.03}, 'Expertise': {'Toughness': 0.03}}
+      convert: { "Concentration": { "Toughness": 0.03 }, "Expertise": { "Toughness": 0.03 } }
     gw2-id: 86016
-    armory-type: 'items'
+    armory-type: "items"
 
-- SECTION: 'Heal Utilities'
+- SECTION: "Heal Utilities"
 
   bountiful-maintenance-oil:
-    text: 'Bountiful Maintenance Oil'
+    text: "Bountiful Maintenance Oil"
     modifiers:
       bountiful-maintenance-oil: 0
     gw2-id: 67528
-    armory-type: 'items'
+    armory-type: "items"
 
-- SECTION: 'Condition Utilities'
+- SECTION: "Condition Utilities"
 
   toxic-focusing-crystal:
-    text: 'Toxic Focusing Crystal'
+    text: "Toxic Focusing Crystal"
     modifiers:
-      convert: {'Condition Damage': {'Power': 0.03, 'Precision': 0.03}}
+      convert: { "Condition Damage": { "Power": 0.03, "Precision": 0.03 } }
     gw2-id: 48917
-    armory-type: 'items'
+    armory-type: "items"
 
   furious-tuning-crystal:
-    text: 'Furious Tuning Crystal'
+    text: "Furious Tuning Crystal"
     modifiers:
-      convert: {'Condition Damage': {'Precision': 0.03}, 'Expertise': {'Precision': 0.03}}
+      convert: { "Condition Damage": { "Precision": 0.03 }, "Expertise": { "Precision": 0.03 } }
     gw2-id: 67524
-    armory-type: 'items'
+    armory-type: "items"
 
   master-tuning-crystal:
-    text: 'Master Tuning Crystal'
+    text: "Master Tuning Crystal"
     modifiers:
-      convert: {'Condition Damage': {'Precision': 0.03, 'Expertise': 0.08}}
+      convert: { "Condition Damage": { "Precision": 0.03, "Expertise": 0.08 } }
     gw2-id: 9476
-    armory-type: 'items'
+    armory-type: "items"
 
   magnanimous-tuning-crystal:
-    text: 'Magnanimous Tuning Crystal'
+    text: "Magnanimous Tuning Crystal"
     modifiers:
-      convert: {'Condition Damage': {'Vitality': 0.03, 'Toughness': 0.03}}
+      convert: { "Condition Damage": { "Vitality": 0.03, "Toughness": 0.03 } }
     gw2-id: 81079
-    armory-type: 'items'
+    armory-type: "items"
 
   bountiful-tuning-crystal:
-    text: 'Bountiful Tuning Crystal'
+    text: "Bountiful Tuning Crystal"
     modifiers:
-      convert: {'Condition Damage': {'Healing Power': 0.06, 'Concentration': 0.08}}
+      convert: { "Condition Damage": { "Healing Power": 0.06, "Concentration": 0.08 } }
     gw2-id: 67522
-    armory-type: 'items'
+    armory-type: "items"
 
-- SECTION: 'SAB Utilities'
+- SECTION: "SAB Utilities"
 
   holographic-super-apple:
-    text: 'Holographic Super Apple'
+    text: "Holographic Super Apple"
     modifiers:
-      convert: {'Condition Damage': {'Concentration': 0.08}, 'Concentration': {'Precision': 0.03}}
+      convert:
+        { "Condition Damage": { "Concentration": 0.08 }, "Concentration": { "Precision": 0.03 } }
     gw2-id: 87336
-    armory-type: 'items'
+    armory-type: "items"
 
   holographic-super-drumstick:
-    text: 'Holographic Super Drumstick'
+    text: "Holographic Super Drumstick"
     modifiers:
-      convert: {'Healing Power': {'Concentration': 0.08}, 'Concentration': {'Precision': 0.03}}
+      convert:
+        { "Healing Power": { "Concentration": 0.08 }, "Concentration": { "Precision": 0.03 } }
     gw2-id: 87329
-    armory-type: 'items'
+    armory-type: "items"
 
   holographic-super-cheese:
-    text: 'Holographic Super Cheese'
+    text: "Holographic Super Cheese"
     modifiers:
-      convert: {'Power': {'Concentration': 0.08}, 'Concentration': {'Precision': 0.03}}
+      convert: { "Power": { "Concentration": 0.08 }, "Concentration": { "Precision": 0.03 } }
     gw2-id: 87358
-    armory-type: 'items'
+    armory-type: "items"
 
-- SECTION: 'Writs'
+- SECTION: "Writs"
 
   writ-of-masterful-accuracy:
-    text: 'Writ of Masterful Accuracy'
+    text: "Writ of Masterful Accuracy"
     modifiers:
-      flat: {'Precision': 200}
+      flat: { "Precision": 200 }
     gw2-id: 76833
-    armory-type: 'items'
+    armory-type: "items"
 
   writ-of-masterful-malice:
-    text: 'Writ of Masterful Malice'
+    text: "Writ of Masterful Malice"
     modifiers:
-      flat: {'Condition Damage': 200}
+      flat: { "Condition Damage": 200 }
     gw2-id: 72510
-    armory-type: 'items'
+    armory-type: "items"
 
   writ-of-masterful-strength:
-    text: 'Writ of Masterful Strength'
+    text: "Writ of Masterful Strength"
     modifiers:
-      flat: {'Power': 200}
+      flat: { "Power": 200 }
     gw2-id: 73191
-    armory-type: 'items'
+    armory-type: "items"
 
-- SECTION: 'Misc'
+- SECTION: "Misc"
 
   potion-of-karka-toughness:
-    text: 'Potion Of Karka Toughness'
+    text: "Potion Of Karka Toughness"
     modifiers:
-      flat: {'Toughness': 150}
+      flat: { "Toughness": 150 }
     gw2-id: 42428
-    armory-type: 'items'
-
+    armory-type: "items"
